<resources>
    <string name="app_name">Battery Tester</string>
    <string name="action_about">O programie</string>
    <string name="action_exit">Zamknij</string>

    <string name="time_view">CZAS</string>
    <string name="temp_view">TEMPERATURA</string>
    <string name="voltage_view">NAPIĘCIE</string>
    <string name="current_view">PRĄD</string>
    <string name="capacity_view">POJEMNOŚĆ</string>
    <string name="rating_view">OCENA OGNIWA</string>

    <string name="start_button">START</string>
    <string name="stop_button">STOP</string>

    <string name="title_activity_about">O programie</string>
    <string name="about_main_info_project">Aplikacja BatteryTester została zaprojektowana do oceny wydajności mierzonego ogniwa. Pozwala w przyjazny sposób przedstawić użytkownikowi stan badanego ogniwa. Wynik jest wyświetlany w postaci pięciu wypełnianych pól w kształcie gwiazdek. Im wyższa ocena tym większą ilość gwiazdek przyznaje aplikacja. Aby rozpocząć proces oceny wykonywanego pomiaru należy wcisnąć przycisk START. Po osiągnięciu przez ogniwo napięcia minimalnego, które wynosi 0,9V, aplikacja automatycznie rozpoczyna proces wnioskowania oraz przedstawia wynik w postaci przyznanych gwiazdek.</string>
    <string name="about_info_project_line_1">Aplikacja powstała w ramach projektu</string>
    <string name="about_info_project_line_2">Pracy Dyplomowej Inżynierskiej</string>
    <string name="about_author">Autor: Mateusz Kurzejewski</string>
    <string name="about_date">Koszalin 2019</string>


</resources>
